package at.htl.entity.dto;

public record ExaminerDto(String userName,
                          String firstName,
                          String lastName,
                          boolean isAdmin
                          ) {
}
