export interface Forms {
    form: string,
    title: string,
    id: number
}
