@startuml
'https://plantuml.com/class-diagram

class Exam{
    pin: String
    title: String
    ongoing: boolean
    formIDs:?
    date: LocalDate
    examineIds:
    examinerIds:
    startTime: LocalDate
    endTime: LocalDate
    registrationMode: String
    modules: ?
}

class Examine{
    enrolementNr: String
    catalogNr: Number
    firstName: String
    lastName: String
}


class ExamineDetails{
    examId:
    examineId:
    isOnline: boolean
    lastOnline: Number
    modules: ?
}

class Examiner{
    userName: String
    firstName: String
    lastName: String
    password: String
    isAdmin: boolean
}

class Screenshot{
    timestamp: Number
    screenshotNr: Number
    examId:
    examineId:
    resolution: String
    compression: Number (?)
    isCompressed: Number (?)
}

class requestSummary{
    duration: Number
    endpoint: String (?)
    date: LocalDate
}

class Form{
    title: String
    year: String
}

class config{
    configVersion: Number
    examinerLoginType: String
    storage: ?
    storageUtilizationCheck: ?
    heartbeat: ?
    examsToDelete:
    pinLength: Number
    webUntis:
    endOfSchoolYear: String
    maintenance: boolean
}

Examine <-- Exam
Examiner <-- Exam
Exam <-- Screenshot
ExamineDetails --> Examine

@enduml